--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,12 +16,12 @@
         
         <h1>URL Shrinker</h1>
         <form action="/shortUrl" method = "POST" class="my-4 form-inline">
-            <label for="fullUrl" class="sr-only">Enter URL</label>
-            <input type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2">
-            <button type="submit" class="btn-success">  Shrink </button>
+            <label for="fullUrl" class="sr-only m-2">Enter URL</label>
+            <input type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2 rounded-pill">
+            <button type="submit" class="btn btn-primary btn-lg rounded-pill m-2">  Shrink </button>
         </form> 
         
-        <table class="table table-striped">
+        <table class="table table-striped rounded-pill">
             <thead>
                
                     
